fix: download tag z-index

--- a/src/styles/basic/tag.less
+++ b/src/styles/basic/tag.less
@@ -2,6 +2,7 @@
   position: fixed;
   right: 0;
   bottom: 120px;
+  z-index: 999;
 }
 
 .right-tag {
